--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Todos</title>
         <link rel="stylesheet" href="styles/main.css" />
-        <script src="scripts/todos.js" defer></script>
+        <script src="https://unpkg.com/vue@3" defer></script>
+        <script src="./scripts/app.js" defer></script>
     </head>
     <body>
         <header>
             <h1>Todo Management</h1>
             <p>Manage your (daily) todos with ease!</p>
         </header>
-        <main>
+        <main id="todos-app">
+            <h2>{{ newTodo }}</h2>
             <section id="todo-management">
                 <form>
                     <label for="text">Todo text</label>
