--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
         <main id="todos-app">
             <h2>{{ newTodo }}</h2>
             <section id="todo-management">
-                <form>
+                <form @submit="saveTodo">
                     <label for="text">Todo text</label>
-                    <input type="text" id="text" name="text" required />
+                    <input
+                        type="text"
+                        id="text"
+                        v-model="enteredTodoText"
+                        required
+                    />
                     <button>Save</button>
                 </form>
             </section>
