--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
                 </form>
             </section>
             <section id="todos">
-                <ul id="todos-list"></ul>
+                <ul id="todos-list">
+                    <li v-for="todo in todos">
+                        <p>{{ todo.text }}</p>
+                        <div>
+                            <button>Edit</button>
+                            <button>Delete</button>
+                        </div>
+                    </li>
+                </ul>
             </section>
         </main>
     </body>
