--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
                 </form>
             </section>
             <section id="todos">
-                <ul id="todos-list">
+                <p v-if="todos.length === 0">
+                    No New Todos Added Yet - maybe start adding some?
+                </p>
+                <ul v-else id="todos-list">
                     <li v-for="todo in todos">
                         <p>{{ todo.text }}</p>
                         <div>
