--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                     <li v-for="todo in todos">
                         <p>{{ todo.text }}</p>
                         <div>
-                            <button>Edit</button>
+                            <button @click="startEditTodo(todo.id)">
+                                Edit
+                            </button>
                             <button>Delete</button>
                         </div>
                     </li>
