--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <button @click="startEditTodo(todo.id)">
                                 Edit
                             </button>
-                            <button>Delete</button>
+                            <button @click="deleteTodo(todo.id)">Delete</button>
                         </div>
                     </li>
                 </ul>
